--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
 @import url("https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Poppins:wght@400;500;700&display=swap");
 
 :root {
+    --blackest: #000;
     --black: #171718;
     --black-border: #26292d;
     --white: #fff;
@@ -14,10 +15,13 @@
     --accent: var(--purple);
 }
 
-body {
+html, body {
     font-family: "DM Sans", sans-serif;
     letter-spacing: -0.5px;
     color: var(--black-text);
+    height: 100%;
+    display: flex;
+    flex-direction: column;
 }
 
 .container {
@@ -56,7 +60,8 @@ body {
 .nav-list {
     display: flex;
     align-items: center;
-    column-gap: 40px;
+    flex-wrap: wrap;
+    gap: 10px 40px;
     font-size: 16px;
     font-weight: 500;
     font-family: "Poppins", sans-serif;
@@ -98,7 +103,7 @@ body {
     background-color: var(--dark-bg);
     background-image: url(../images/header-background.png);
     background-repeat: no-repeat;
-    background-size: auto;
+    background-size: contain;
     background-position: center;
     color: var(--header-text);
     text-align: center;
@@ -152,13 +157,13 @@ body {
     opacity: 0.8;
 }
 
-/* Projects */
+/* Section */
 
-.projects {
+.section {
     padding: 70px 0;
 }
 
-.projects__title {
+.section__title {
     margin-bottom: 60px;
     font-size: 60px;
     font-weight: 700;
@@ -167,10 +172,13 @@ body {
     text-align: center;
 }
 
+/* Projects */
+
 .projects__list {
     display: flex;
     flex-wrap: wrap;
     gap: 30px;
+    justify-content: center;
 }
 
 .project {
@@ -204,6 +212,7 @@ body {
     padding: 60px 0 50px;
     background-color: var(--dark-bg);
     color: var(--header-text);
+    margin-top: auto;
 }
 
 .footer__wrapper {
@@ -219,10 +228,130 @@ body {
     column-gap: 30px;
 }
 
+.social__item a{
+    display: flex;
+}
+
 .copyright {
     font-size: 16px;
 }
 
 .copyright p + p {
     margin-top: 0.5em;
+}
+
+/* Project Details  */
+
+.project-details {
+    margin: 0 auto;
+    max-width: 865px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.project-details__image {
+    max-width: 100%;
+    margin-bottom: 40px;
+    border-radius: 10px;
+    box-shadow: 0px 5px 35px 0px rgba(0, 0, 0, 0.25);
+}
+
+.project-details__description {
+    margin-bottom: 30px;
+    font-size: 24px;
+    font-weight: 700;
+    line-height: 1.3;
+}
+
+.button-outline {
+    height: 48px;
+    padding: 12px 20px;
+    border-radius: 5px;
+    border: 1px solid var(--blackest);
+    background-color: var(--white);
+    color: var(--blackest);
+    display: flex;
+    column-gap: 10px;
+    align-items: center;
+    transition: opacity 0.2s ease-in;
+}
+
+.button-outline:hover {
+    opacity: 0.8;
+}
+
+/* Content List */
+
+.content-list {
+    margin: 0 auto;
+    max-width: 970px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    row-gap: 30px;
+}
+
+.content-list a {
+    color: var(--accent);
+}
+
+.content-list__item {
+    font-size: 18px;
+    line-height: 1.5;
+}
+
+.content-list__item p + p {
+    margin-top: 0.5em;
+}
+
+.content-list__title {
+    margin-bottom: 20px;
+    font-size: 40px;
+    line-height: 1.3;
+    font-weight: 700;
+}
+
+@media screen and (max-width: 620px) {
+    .header{
+        min-height: unset;
+    }
+
+    .header__title{
+        font-size: 30px;
+    }
+
+    .header__title strong {
+        font-size: 40px;
+    }
+
+    .section{
+        padding: 40px 0;
+    }
+
+    .section__title {
+        margin-bottom: 40px;
+    }
+
+    .footer{
+        padding: 40px 0 30px;
+    }
+
+    .footer__wrapper{
+        row-gap: 20px;
+    }
+
+    .social{
+        column-gap: 20px;
+    }
+
+    .social__item{
+        width: 28px;
+    }
+
+    .content-list__title{
+        margin-bottom: 10px;
+        font-size: 30px;
+    }
 }
